[package]
name = "blockchain-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
base64 = "0.22.1"
secp256k1 = { version = "0.30.0", features = ["rand", "serde", "hashes"] }
ecdsa = "0.16.9"
rand = "0.8.5"
serde_json = "1.0.134"
sha2 = "0.10.8"
